[package]
name = "rust-stream-ext-concurrent"
description = "Concurrent behavior extensions for any futures::stream::Stream objects"
version = "1.0.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hoprnet/rust-stream-ext-concurrent"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.28"
pin-project = "1.0.12"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
more-asserts = "0.3.1"
env_logger = "0.10.0"
